# 0xCDN

./: .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
assets/: hello.txt  sample.json
src/: config.py  entrypoint.py
src/application/: cache_service.py  health_service.py  metrics_service.py  purge_service.py  routing_service.py  warm_service.py
src/domain/: entities.py  ports.py  value_objects.py
src/infrastructure/: auth.py  cache_control.py  circuit_breaker.py  compression.py  logging.py
src/infrastructure/cache/: __init__.py  lru_store.py  tiered_store.py
src/infrastructure/http/: origin_client.py  shield_client.py
src/presentation/edge/: app.py  middleware.py  routes.py
src/presentation/management/: app.py  routes.py
src/presentation/origin/: app.py  routes.py
src/presentation/router/: app.py  routes.py
tests/: conftest.py
tests/integration/: test_cache_flow.py  test_metrics.py  test_purge_propagation.py  test_router_proxy.py
tests/unit/: test_auth.py  test_cache_control.py  test_cache_service.py  test_circuit_breaker.py  test_compression.py  test_lru_store.py  test_range_requests.py  test_routing_service.py  test_vary.py
